--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,14 @@ h1 {
   margin: 10px auto;
 }
 
-.one {
-  background-color: rgb(255, 0, 0);
+.red {
+  background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
 }
 
-.two {
-  background-color: rgb(0, 255, 0);
+.green {
+  background: linear-gradient(#55680d, #71f53e, #116c31);
 }
 
-.three {
-  background-color: rgb(0, 0, 255);
+.blue {
+  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
 }
